--- a/weather_map.html
+++ b/weather_map.html
@@ -7,34 +7,66 @@
     <link href='https://api.tiles.mapbox.com/mapbox-gl-js/v0.53.0/mapbox-gl.css' rel='stylesheet'/>
     <!--Bootstrap CSS-->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <!--Google Fonts-->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Nanum+Gothic&family=Ubuntu&display=swap" rel="stylesheet">
     <!--Custom CSS-->
     <link rel="stylesheet" href="CSS/weather_map.css">
 </head>
 <body>
-<!--header-->
-<div id="weatherHeader" class="container-fluid text-light">
-    <h1>Weather App</h1>
-</div>
+        <div class="container-fluid">
 
-<!--5-day weather forecast-->
-<div id="insertCurrent"></div>
-<div id="insertWeather"></div>
+            <!--sidebar-->
+<!--            <nav id="sidebarMenu" class="m-0 collapse d-lg-block sidebar collapse bg-white">-->
+                        <div class="row text-light">
+                            <h1 id="weatherHeader" >Weather</h1>
+                        </div>
+<!--            </nav>-->
 
-<!--searchbar-->
-<div id="searchBar" class="container-fluid form-group">
-    <label for="address-input" class="form-label">Enter a place:</label>
-    <input id="address-input" class="form-label" type="text">
-    <button id="search-btn" type="button" class="form-label">Search and Move</button>
-</div>
+            <div class="row w-100 mt-3 d-flex justify-content-around">
+                <div id="mapBackground" class="col-7">
+                    <!--searchbar-->
+                    <div id="searchBar" class="container-fluid form-group">
+                        <label for="address-input" class="form-label">Enter a place:</label>
+                        <input id="address-input" class="form-label" type="text">
+                        <button id="search-btn" type="button" class="form-label">Search and Move</button>
+                    </div>
 
-<!--mapbox map-->
-<div id="map"></div>
-<pre id="coordinates" class="coordinates"></pre>
+                    <!--mapbox map-->
+                    <div>
+                        <div id="map">
+                            <div id="coordinates" class="coordinates"></div>
+                        </div>
 
-<!--footer-->
-<div id="footer" class="text-center">
-    <p>Copyright ©2023</p>
-</div>
+                    </div>
+                </div>
+
+                <!--current forecast-->
+
+                <div class="col-4">
+                    <div class="row">
+                        <div id="insertCurrent"></div>
+                    </div>
+                    <div class="row">
+<!--                        <img id="thermometer" src="img/thermometer-icon.png">-->
+                        <div id="insertIcon"></div>
+                    </div>
+                </div>
+            </div>
+            <!--5-day weather forecast-->
+            <div class="row">
+                <div id="insertWeatherContainer">
+                    <h3 id="forecastHeader" class="d-none">5 Day Forecast</h3>
+                    <div id="insertWeather"></div>
+                </div>
+            </div>
+            <!--footer-->
+<!--            <div id="footer" class="text-center">-->
+<!--                <p>Copyright ©2023</p>-->
+<!--            </div>-->
+
+        </div>
 
 
 <!--JQuery JS-->
