changed toggle btn color

--- a/weather_map.html
+++ b/weather_map.html
@@ -23,7 +23,7 @@
 <!--            <nav id="sidebarMenu" class="m-0 collapse d-lg-block sidebar collapse bg-white">-->
                         <div id="weatherHeader" class="dayModeHeader row text-light d-flex justify-content-between">
                             <h1 id="weatherDashboard" class="col-6">Weather Dashboard</h1>
-                            <button id="colorModeBtn" type="button" class="btn col-6 align-items-center"><i class="fa-regular fa-star fs-1"></i></button>
+                            <button id="colorModeBtn" type="button" class="dayModeBtn btn col-6 align-items-center"><i class="fa-regular fa-star fs-1"></i></button>
                         </div>
 <!--            </nav>-->
 
